// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/TextInput/TextInput.tools.svelte: Default 1`] = `
<span
  class="inline-block w-64"
>
  <span
    class="svelte-1crflxh"
  >
     
    <input
      class="svelte-1crflxh"
      placeholder=""
      type="text"
    />
  </span>
</span>
`;

exports[`Toolshot components/TextInput/TextInput.tools.svelte: With icon and placeholder 1`] = `
<span
  class="inline-block w-64"
>
  <span
    class="svelte-1crflxh icon"
  >
    <i
      class="material-icons svelte-1crflxh"
    >
      search
    </i>
     
    <input
      class="svelte-1crflxh"
      placeholder="search..."
      type="search"
    />
  </span>
</span>
`;

exports[`Toolshot components/TextInput/TextInput.tools.svelte: With value 1`] = `
<span
  class="inline-block w-64"
>
  <span
    class="svelte-1crflxh icon"
  >
    <i
      class="material-icons svelte-1crflxh"
    >
      person
    </i>
     
    <input
      class="svelte-1crflxh"
      placeholder=""
      type="text"
    />
  </span>
</span>
`;
